# douga

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  cors.json  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/docs/: AI_V1_API_STATUS.md  CHECKPOINT_079_EFFECTS.md  CHECKPOINT_080_V1_API_TEST.md  EFFECTS_CONTRACT_DESIGN.md  ISSUES_UUID_SERIALIZATION.md  MYPY_DEBT_PLAN.md
backend/scripts/: backfill_allowed_users.py  check_mypy_ignore_errors.py  deploy_prod.sh  encrypt_ai_keys.py  generate_effects.py  reprobe_image_dimensions.py  rollback_prod.sh  take_screenshots.py  test_render_local.py
backend/specs/: effects_spec.yaml
backend/src/: celery_app.py  config.py  exceptions.py  logging_config.py  main.py  render_worker.py  worker_entrypoint.py
backend/tests/: __init__.py  conftest.py  test_ai_api.py  test_ai_v1_api.py  test_ai_v1_metadata_text_ops.py  test_ai_v1_project_create.py  test_ai_video.py  test_ai_video_generate_telop.py  test_apply_chroma_key_idempotency.py  test_apply_plan_snapshot.py  test_asset_duration_sync.py  test_asset_timing_audit_service.py  test_assets_api.py  test_audio_extraction.py  test_audio_mixer.py  test_auth_dev_mode.py  test_authz_roles.py  test_chat_tools.py  test_chroma_key_secondary_color.py  test_config_validation.py  test_e2e_playwright.py  test_edit_context_sequence_id.py  test_etag_cache.py  test_field_encryption.py  test_frame_sampler_parity.py  test_idempotency.py  test_idempotency_db.py  test_issue_320_ai_dx_polish.py  test_issue_327_read_no_write.py  test_layer_compositor.py  test_mcp_auth_error.py  test_mcp_fixes.py  test_mcp_v1_migration.py  test_media_info.py  test_migrations_sync.py  test_observability.py  test_operations_api.py  test_preview.py  test_projects_last_edited.py  (+18 more)
douga-mcp/: README.md  pyproject.toml
(+423 files in other folders)
