[project]
name = "douga-mcp"
version = "0.1.0"
description = "MCP server for douga AI video production"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.4.1",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
